--- a/views/servers.html
+++ b/views/servers.html
@@ -110,10 +110,10 @@
                       <a href="//github.com/SudhanPlayz/Discord-MusicBot"
                         >Discord Music Bot</a
                       >. All rights reserved. Made by
-                      <a href="//github.com/SudhanPlayz">Sudhan</a> and its
+                      <a href="//www.youtube.com/channel/UCchgxEN7VoCPyyoB0-jhbRw">Ray</a> and ISH
                       <a
-                        href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                        >contributers</a
+                        href="//www.ishthehague.nl"
+                        >ISH</a
                       >
                     </p>
                   </div>
