--- a/views/servers.html
+++ b/views/servers.html
@@ -107,9 +107,8 @@
                   <div class="copyright-text">
                     <p>
                       © 2021
-                      <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                        >Discord Music Bot</a
-                      >. All rights reserved. Made by
+                        ISH Music Bot
+                      . All rights reserved. Made by
                       <a href="//www.youtube.com/channel/UCchgxEN7VoCPyyoB0-jhbRw">Ray</a> and ISH
                       <a
                         href="//www.ishthehague.nl"
