--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img
-              src="/logo.gif"
+              src="/ab73c9a662123481ff7508e1d254da8e.png"
               alt="Music Bot Logo"
               width="30"
               height="30"
@@ -99,7 +99,7 @@
                 <h2 class="title">Exclusive <span>Features</span></h2>
                 <p class="description">
                   There are many Features in discord music bot! Every awesome
-                  features of this bot has been descirbed below check it out 😉
+                  features of this bot have been described below enjoy!
                 </p>
               </div>
             </div>
@@ -177,13 +177,12 @@
               <div class="copyright-text">
                 <p>
                   © 2021
-                  <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                    >Discord Music Bot</a
-                  >. All rights reserved. Made by
-                  <a href="//github.com/SudhanPlayz">Sudhan</a> and its
+                    ISH Music Bot
+                  . All rights reserved. Made by
+                  <a href="//www.youtube.com/channel/UCchgxEN7VoCPyyoB0-jhbRw">Ray</a> and ISH
                   <a
-                    href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                    >contributers</a
+                    href="//www.ishthehague.nl"
+                    >ISH</a
                   >
                 </p>
               </div>
