--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link rel="shortcut icon" href="/logo.gif" type="image/gif" />
+    <link rel="shortcut icon" href="/ab73c9a662123481ff7508e1d254da8e.png" type="image/png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -165,13 +165,12 @@
                   <div class="copyright-text">
                     <p>
                       © 2021
-                      <a href="//github.com/SudhanPlayz/Discord-MusicBot"
-                        >Discord Music Bot</a
-                      >. All rights reserved. Made by
-                      <a href="//github.com/SudhanPlayz">Sudhan</a> and its
+                        ISH Music Bot
+                      . All rights reserved. Made by
+                      <a href="//www.youtube.com/channel/UCchgxEN7VoCPyyoB0-jhbRw">Ray</a> and ISH
                       <a
-                        href="//github.com/SudhanPlayz/Discord-MusicBot/graphs/contributors"
-                        >contributers</a
+                        href="//www.ishthehague.nl"
+                        >ISH</a
                       >
                     </p>
                   </div>
